%%{init: {"theme": "default", "classDiagram": {"nodeSpacing": 20, "rankSpacing": 30}}}%%
classDiagram
  direction LR

  class NetworkMessageHandler {
    <<interface>>
    +sendToClient(clientId String, message String) void
    +waitForClientResponse(clientId String, timeoutMs int) String
  }
  class ServerSocketHandler {
    +ServerSocketHandler()
    +startServer() void
    +waitForAtLeastClients(targetClients int, timeoutMs long) boolean
    +getConnectedClientIds() List~String~
    +isClientConnected(clientId String) boolean
    +broadcastToAllClients(message String) void
    +sendToClient(clientId String, message String) void
    +waitForClientResponse(clientId String, timeoutMs int) String
    +stopServer() void
    +getConnectedClientCount() int
    +getActualPort() int
    +setGameStarted(started boolean) void
  }
  class ClientHandler {
    +ClientHandler(clientSocket Socket, serverHandler ServerSocketHandler)
    +handleClient() void
    +sendMessage(message String) void
    +disconnect() void
    +getClientId() String
  }

  NetworkMessageHandler <|.. ServerSocketHandler
  ServerSocketHandler *-- "0..*" ClientHandler : manages
